# sprited

./: .env.example  .gitignore  LICENSE  README.md  app.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
become_human/: config.py  manager.py  message.py  names.py  plugin.py  scheduler.py  tool.py
become_human/plugins/: __init__.py  cli.py  note.py  reminder.py  time_incrementer.py
become_human/store/: base.py  settings.py
become_human/tools/: web_search.py
docs/: README.md  event.md  manager.md  message.md  plugin.md  scheduler.md  store.md  times.md  tool.md
experiments/: memory_curves.ipynb  time.ipynb
sprited/: __init__.py  config.py  constants.py  event.py  manager.py  message.py  plugin.py  scheduler.py  times.py  tool.py  types.py  utils.py
sprited/graphs/: base.py  main.py
sprited/plugins/: __init__.py  api.py  cli.py  instruction.py  note.py  planning.py  reminder.py  time_incrementer.py
sprited/store/: base.py  manager.py  settings.py  states.py
sprited/tools/: __init__.py  record_thoughts.py  send_message.py
sprited/types/: main.py  manager.py
tests/: test_times.py
tests/graphs/: test_base.py
