[project]
name = "sprited"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.0.13",
    "dashscope>=1.23.2",
    "fastapi>=0.115.9",
    "jieba>=0.42.1",
    "langchain>=1.0.0",
    "langchain-core>=1.2.5",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.3.22",
    "langchain-dev-utils[standard]>=1.3.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.3.14",
    "langchain-qwq>=0.3.1",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "pyjwt>=2.10.1",
    "tomlkit>=0.13.3",
    "trustcall>=0.0.39",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "uvicorn>=0.34.2",
    "webpush>=1.0.6",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
]
