[project]
name = "sprited"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "dashscope>=1.23.2",
    "fastapi>=0.115.9",
    "langchain>=1.0.0",
    "langchain-core>=1.2.5",
    "langchain-anthropic>=1.3.0",
    "langchain-community>=0.3.22",
    "langchain-dev-utils[standard]>=1.3.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.3.14",
    "langchain-qwq>=0.3.1",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "pyjwt>=2.10.1",
    "tomlkit>=0.13.3",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "uvicorn[standard]>=0.34.2",
    "webpush>=1.0.6",
    "loguru>=0.7.3",
    "python-dateutil>=2.9.0.post0",
    "packaging>=25.0",
    "bcrypt>=5.0.0",
    "msgpack>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
include = ["sprited*"]
